# SeetaFaceEngine

./: .gitignore  CMakeLists.txt
CocsoFace/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
CocsoFace/src/: FaceSpy.cpp  extractFeats.cpp  extractFeats.h
FALCONN/src/include/falconn/core/: prefetchers.h
FaceAlignment/: CMakeLists.txt
FaceAlignment/src/: cfan.cpp
FaceApp/: CMakeLists.txt  FaceApp.pro  FaceEngine.cpp  FeaFile.cpp  FeaFile.h  SearchActor.cpp  SearchActor.h  SearchActorCreate.cpp  design.qrc  mainwindow.cpp  mainwindow.h
FaceApp/src/: CMakeLists.txt
FaceApp/src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
FaceApp/src/mkdb/: CMakeLists.txt  mkdb.cpp  testdb.cpp
FaceApp/src/searcher/: CMakeLists.txt  FaceEngine.cpp  FaceEngine.h  SearchActor.cpp  SearchActor.h
FaceDetection/: CMakeLists.txt
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: blob.h  face_identification.h  hyper_param.h  log.h  net.h  recognizer.h  viplnet.h
FaceIdentification/src/: common_net.cpp
FaceIdentification/src/test/: CMakeLists.txt
FaceIdentification/tools/: aligner.cpp
cv/: CMakeLists.txt  cp.cpp  data_2.cpp  data_4.cpp  io.cpp
seeta/: seeta.cpp
